force-app/main/default/objects/ANI_TFN_Mapping__c/ANI_TFN_Mapping__c.object-meta.xml
<CustomObject>
    <description>This custom object exists to improve the user experience for the system administrators that will be adding/modifying records for the custom object Routing Record. 

A record of this object should have a field for toll-free number and DID number.</description>
    <label>TFN Mapping</label>
    <nameField>
        <label>Toll-Free Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TFN Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>