force-app/main/default/objects/ANI_TFN_Mapping__c/fields/ANI_DID_Number__c.field-meta.xml
<CustomField>
    <fullName>ANI_DID_Number__c</fullName>
    <description>This field should store the value of the DID Number that corresponds with the TFN. This number will feed the Routing Record object</description>
    <inlineHelpText>What is the corresponding DID Number for the TFN?</inlineHelpText>
    <label>DID Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>