force-app/main/default/objects/ANI_TFN_Mapping__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Created to include the name of the Segment for the TFN</description>
    <inlineHelpText>Not required, add if available</inlineHelpText>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>