force-app/main/default/objects/ANI_TFN_Mapping__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Division Info</description>
    <label>Location</label>
    <referenceTo>Operational_Data__c</referenceTo>
    <relationshipLabel>TFN Mappings</relationshipLabel>
    <relationshipName>TFN_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>