force-app/main/default/objects/ANI_TFN_Mapping__c/fields/Open_Close__c.field-meta.xml
<CustomField>
    <fullName>Open_Close__c</fullName>
    <description>Hours for open and close</description>
    <label>Open/Close</label>
    <length>100</length>
    <type>Text</type>
</CustomField>