force-app/main/default/objects/ANI_TFN_Mapping__c/fields/Service_Area_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Time_Zone__c</fullName>
    <label>Service Area Time Zone</label>
    <type>TextArea</type>
</CustomField>