force-app/main/default/objects/ANI_TFN_Mapping__c/listViews/CIN.listView-meta.xml
<ListView>
    <fullName>CIN</fullName>
    <columns>NAME</columns>
    <columns>ANI_DID_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Group_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Cincinnati</value>
    </filters>
    <label>CIN CSC</label>
    <sharedTo>
        <group>All_Admins</group>
        <role>CS_CSC_Operations_Mgmt</role>
    </sharedTo>
</ListView>