force-app/main/default/objects/ANI_TFN_Mapping__c/listViews/JAX_CSC_TFNs.listView-meta.xml
<ListView>
    <fullName>JAX_CSC_TFNs</fullName>
    <columns>NAME</columns>
    <columns>ANI_DID_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Open_Close__c</columns>
    <columns>Service_Area_Time_Zone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>CXC - Jacksonville</value>
    </filters>
    <label>JAX CSC TFNs</label>
</ListView>