force-app/main/default/objects/ANI_TFN_Mapping__c/listViews/TFN_Data.listView-meta.xml
<ListView>
    <fullName>TFN_Data</fullName>
    <columns>NAME</columns>
    <columns>ANI_DID_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Open_Close__c</columns>
    <columns>Service_Area_Time_Zone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All TFN Data</label>
</ListView>